added new song files

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,7 +20,8 @@
     <script>
 
     $(document).ready(function() {
-      url = "https://bv1e9klemd.execute-api.us-east-1.amazonaws.com/api/songs";
+      url = "http://54.144.44.75/songs";
+      // url = "https://bv1e9klemd.execute-api.us-east-1.amazonaws.com/api/songs";
       $.ajax({
         // update the URL below to your songs API
         url: url,
